--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,14 +13,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.13" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="5.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="QRCodes\GeneratePointQRCodes\" />
   </ItemGroup>
 
 </Project>
