--- a/UI/angular.json
+++ b/UI/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "UI"
+    }
+  },
+  "defaultProject": "UI",
+  "cli": {
+    "analytics": false
+  }
 }
