--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -17,5 +17,6 @@
     "SecurityKey": "deratcontrol123456",
     "AdminPassword": "V@lr1n0k",
     "QrCodeSymmetricEncryptionKey": "jhfkldshf893h83h"
-  }
+  },
+  "DeratFolder" :  "D:\\Derat"
 }
