--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -18,5 +18,5 @@
     "AdminPassword": "V@lr1n0k",
     "QrCodeSymmetricEncryptionKey": "jhfkldshf893h83h"
   },
-  "DeratFolder" :  "D:\\Derat"
+  "DeratFolder" :  "Derat"
 }
