--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,17 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DeratControlDatabase": "Server=localhost;Port=5432;Database=DeratControlDatabase;User Id=postgres;Password=V@lr1n0k;"
-  },
-  "Security": {
-    "Issuer": "deratcontrol",
-    "Audience": "deratcontrol",
-    "LifeTime": "365",
-    "SecurityKey": "deratcontrol123456",
-    "AdminPassword": "V@lr1n0k",
-    "QrCodeSymmetricEncryptionKey": "jhfkldshf893h83h"
-  },
-  "DeratFolder" :  "Derat"
+  "AllowedHosts": "*"
 }
